# cpp-voice-home-bot-esp32-s3

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig  sdkconfig.defaults
include/: I2SMicrophone.h  LEDController.h
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/audio/: audio_player.cpp  audio_player.h
main/audio/include/: audio_player.h
main/i2s/: my_i2s.cpp  my_i2s.h
main/i2s_driver/: i2s_driver.cpp  i2s_driver.h
main/voice/: VoiceInput.cpp  VoiceInput.h
main/wake_detect/: wake_detect_task.cpp  wake_detect_task.h  wake_net.cpp  wake_net.h
main/wake_detect/include/: wake_detect_task.h
main/wakenet/: my_wake_net.cpp  my_wake_net.h  my_wakenet.cpp  my_wakenet.h  wake_detect_task.cpp  wake_detect_task.h
src/: I2SMicrophone.cpp  LEDController.cpp  main.cpp
